# attribute-knowledge-rag

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.sh  stop.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: opensearch_mapping.json
frontend/public/: sample_attributes.csv
frontend/src/: App.css  App.tsx  Layout.tsx  api.ts  types.ts
frontend/src/components/: ClarificationCard.tsx  DslPanel.tsx  FilterChip.tsx  ProviderBar.tsx  SetupPanel.tsx
frontend/src/pages/: CatalogPage.tsx  DemoPage.tsx  SettingsPage.tsx
src/akrag/: cli.py  config.py  contract.py  decision.py  io.py  main.py  models.py  orchestrator.py
src/akrag/api/: health.py  ingest.py  query.py  settings.py
src/akrag/embeddings/: __init__.py  base.py  bedrock.py  factory.py  gemini.py  openai_emb.py  sentence.py
src/akrag/llm/: __init__.py  base.py  bedrock.py  claude.py  factory.py  ollama.py  openai_llm.py
src/akrag/search/: __init__.py  base.py  chroma_backend.py  factory.py  faiss_backend.py  local.py  opensearch_backend.py
tests/: test_api.py  test_contract.py  test_retrieval.py
