[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akrag"
version = "0.1.0"
description = "Attribute Knowledge RAG — enterprise attribute metadata as an AI-searchable knowledge layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
claude  = ["anthropic>=0.30.0"]
openai  = ["openai>=1.35.0"]
bedrock = ["boto3>=1.34.0"]
gemini  = ["google-generativeai>=0.7.0"]
sentence   = ["sentence-transformers>=3.0.0"]
opensearch = ["opensearch-py>=2.6.0"]
faiss  = ["faiss-cpu>=1.8.0"]
chroma = ["chromadb>=0.5.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
all = [
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "boto3>=1.34.0",
    "google-generativeai>=0.7.0",
    "sentence-transformers>=3.0.0",
    "opensearch-py>=2.6.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.0",
]

[project.scripts]
akrag = "akrag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/akrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src"]
